--- a/#src/scss/case/media.scss
+++ b/#src/scss/case/media.scss
@@ -24,6 +24,26 @@
     .tab {
         margin-right: 50px;
     }
+    .c-promotion__block-img {
+        width: 380px;
+    }
+    .c-promotion__block {
+        width: 380px;
+    }
+    .c-promotion__blocks {
+        gap: 23px 23px;
+    }
+    .c-promotion__block {
+        margin-left: 20px;
+    }
+}
+@media (max-width: 1280px) {
+    .c-promotion__block-img {
+        width: 355px;
+    }
+    .c-promotion__block-img::after {
+        width: 345px;
+    }
 }
 @media (max-width: 1250px) {
     .c-header__container {
@@ -32,7 +52,7 @@
     .c-header__news-text {
         width: 895px;
     }
-    .c-promotion__block {
+    .c-promotion__blocks .c-promotion__block {
         &:nth-child(3) {
             display: none;
         }
@@ -42,15 +62,35 @@
         &:nth-child(9) {
             display: none;
         }
+        // display: grid;
+        // align-items: center;
+    }
+    .c-promotion__blocks-hidden .c-promotion__block {
+        &:nth-child(2) {
+            display: none;
+        }
+        &:nth-child(5) {
+            display: none;
+        }
+        &:nth-child(8) {
+            display: none;
+        }
+        // display: grid;
+        // align-items: center;
     }
     .c-promotion__blocks {
         grid-template-columns: repeat(2,1fr);
         grid-template-rows: repeat(3,1fr);
-        gap: 30px 15px;
+        gap: 40px 15px;
+    }
+    .c-promotion__blocks-hidden {
+        grid-template-columns: repeat(2,1fr);
+        grid-template-rows: repeat(3,1fr);
+        gap: 40px 15px;
     }
     .c-promotion__block {
         height: 275px;
-        width: 100%;
+        width: 97%;
     }
     .c-promotion__block-img img {
         width: 100%;
@@ -61,8 +101,11 @@
     .tab {
         margin-right: 50px;
     }
+    .c-promotion__block-img {
+        width: 90%;
+    }
     .c-promotion__block-img::after {
-        display: none;
+        width: 100%;
     }
 }
 @media (max-width: 1200px) {
@@ -172,16 +215,6 @@
         flex-direction: column;
         align-items: flex-start;
         padding: 51px 0 51px 45px;
-        position: relative;
-        &::after {
-            content: "🠖";
-            font-size: 60px;
-            display: inline-block;
-            position: absolute;
-            top: 100px;
-            right: 47px;
-            color: #fff;
-        }
     }
     .c-list__block-blocks {
         flex-direction: column;
@@ -205,6 +238,14 @@
     .c-list__text-title {
         width: 100%;
     }
+    .c-list__block-blocks {
+        position: relative;
+    }
+    .c-list__block-arrow {
+        position: absolute;
+        top: 40px;
+        right: -380px;
+    }
 }
 @media (max-width: 1000px) {
     .c-header__news-text {
@@ -218,6 +259,9 @@
     }
     .tab {
         margin-right: 50px;
+    }
+    .c-header__news-title {
+        width: 100%;
     }
 }
 @media (max-width: 950px) {
@@ -239,6 +283,11 @@
     .c-list__text {
         padding: 146px 45px 98px 90px;
     }
+    .c-list__block-arrow {
+        position: absolute;
+        top: 40px;
+        right: -320px;
+    }
 }
 @media (max-width: 900px) {
     .c-header__container {
@@ -256,6 +305,11 @@
     .c-list__text-title {
         width: 100%;
     }
+    .c-list__block-arrow {
+        position: absolute;
+        top: 40px;
+        right: -270px;
+    }
 }
 @media (max-width: 850px) {
     .c-header__container {
@@ -269,6 +323,11 @@
     }
     .tab {
         margin-right: 30px;
+    }
+    .c-list__block-arrow {
+        position: absolute;
+        top: 40px;
+        right: -230px;
     }
 }
 @media (max-width: 800px) {
@@ -290,6 +349,11 @@
     .c-list__text-title {
         font-size: 20px;
     }
+    .c-list__block-arrow {
+        position: absolute;
+        top: 40px;
+        right: -190px;
+    }
 }
 @media (max-width: 750px) {
     .c-header__container {
@@ -297,6 +361,9 @@
     }
     .c-header__news-text {
         width: 670px;
+    }
+    .c-promotion__block-img {
+        width: 98%;
     }
     .tab-1 {
         margin: 0 0 96px 70px;
@@ -307,7 +374,7 @@
     .c-list__text-title {
         width: 100%;
     }
-    .c-promotion__block {
+    .c-promotion__blocks .c-promotion__block {
         &:nth-child(3) {
             display: block;
         }
@@ -332,8 +399,18 @@
         grid-template-rows: repeat(6,1fr);
         gap: 20px 10px;
     }
+    .c-promotion__blocks-hidden {
+        grid-template-columns: repeat(1,1fr);
+        grid-template-rows: repeat(6,1fr);
+        gap: 20px 10px;
+    }
     .tab-form {
         padding: 30px 28px;
+    }
+    .c-list__block-arrow {
+        position: absolute;
+        top: 40px;
+        right: -150px;
     }
 }
 @media (max-width: 700px) {
@@ -346,7 +423,13 @@
     }
     .c-header__news-text {
         width: 100%;
-        height: 100%;
+        height: 20%;
+    }
+    .c-header__news-btn-container {
+        margin-top: 0;
+    }
+    .c-header__news-title {
+        font-size: 40px;
     }
     .c-promotion__media {
         display: block;
@@ -363,6 +446,11 @@
     .c-header__nav {
         padding: 0 28px;
     }
+    .c-list__block-arrow {
+        position: absolute;
+        top: 40px;
+        right: -100px;
+    }
 }
 @media (max-width: 650px) {
     .c-header__news-title {
@@ -371,6 +459,11 @@
     .c-header__news-text {
         width: 590px;
     }
+    .c-list__block-arrow {
+        position: absolute;
+        top: 40px;
+        right: -60px;
+    }
 }
 @media (max-width: 600px) {
     .c-header__news-title {
@@ -378,6 +471,11 @@
     }
     .c-header__news-text {
         width: 540px;
+    }
+    .c-list__block-arrow {
+        position: absolute;
+        top: 40px;
+        right: 0px;
     }
 }
 @media (max-width: 550px) {
@@ -391,6 +489,20 @@
         font-size: 17px;
         white-space: normal;
     }
+    .c-list__block-arrow {
+        position: absolute;
+        top: 40px;
+        right: 40px;
+    }
+    .c-list__block-blocks {
+        width: 440px;
+    }
+    .team__text-title {
+        font-size: 23px;
+    }
+    .team__text-item {
+        font-size: 14px;
+    }
 }
 @media (max-width: 500px) {
     .c-header__news-title {
@@ -398,6 +510,21 @@
     }
     .c-header__news-text {
         width: 420px;
+    }
+    .c-list__block-arrow {
+        position: absolute;
+        top: 40px;
+        right: 90px;
+    }
+    .c-list__block-blocks {
+        width: 410px;
+    }
+    .c-header__news-title {
+        font-size: 25px;
+        line-height: 43px;
+    }
+    .c-header__news-btn-container {
+        margin-top: 20px;
     }
 }
 @media (max-width: 450px) {
@@ -417,6 +544,14 @@
     .c-list__text {
         padding: 146px 20px 98px 28px;
     }
+    .c-list__block-arrow {
+        position: absolute;
+        top: 40px;
+        right: 60px;
+    }
+    .c-list__block-blocks {
+        width: 380px;
+    }
 }
 @media (max-width: 400px) {
     .c-header__news-title {
@@ -425,7 +560,16 @@
     .c-header__news-text {
         width: 300px;
     }
+    .c-list__block-arrow {
+        position: absolute;
+        top: 40px;
+        right: 0px;
+    }
+    .c-list__block-blocks {
+        width: 290px;
+    }
 }
+
 
 
 
