--- a/#src/scss/index/team.scss
+++ b/#src/scss/index/team.scss
@@ -17,7 +17,8 @@
         right: 40%;
     }
     &__text {
-        padding: 85px 90px 85px 90px;
+        padding: 90px 0 60px 0;
+        margin: 0 auto;
         &-block {
             margin-top: 62px;
             width: 100%;
