--- a/#src/scss/seo/result.scss
+++ b/#src/scss/seo/result.scss
@@ -1,6 +1,7 @@
 .seo-result {
     width: 100%;
-    height: 665px;
+    height: 100%;
+    padding: 0 0 50px 0;
     background: #0D0D0D;
     & .container {
         max-width: 1440px;
@@ -21,6 +22,12 @@
         &-list {
             padding: 85px 0 0 0;
         }
+        &-media {
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            display: none;
+        }
         &-item {
             border-bottom: 1px solid #fff;
             display: flex;
@@ -30,6 +37,11 @@
             &:hover {
                 transition: all .0.5s ease;
                 & .seo-result__block-number {
+                    color: #000;
+                    background-color: #fff;
+                    transition: all .0.5s ease;
+                }
+                & .seo-result__block-number-media {
                     color: #000;
                     background-color: #fff;
                     transition: all .0.5s ease;
@@ -59,6 +71,24 @@
             align-items: center;
             justify-content: center;
             transition: all .0.5s ease;
+            &-media {
+                border: 1px solid #fff;
+                width: 75px;
+                height: 75px;
+                background: transparent;
+                font-family: Circe;
+                font-style: normal;
+                font-weight: bold;
+                font-size: 30px;
+                line-height: 47px;
+                letter-spacing: 0.12em;
+                text-transform: uppercase;
+                color: #FFFFFF;
+                display: flex;
+                align-items: center;
+                justify-content: center;
+                transition: all .0.5s ease;
+            }
         }
         &-text {
             width: 286px;
@@ -71,6 +101,18 @@
             letter-spacing: 0.12em;
             text-transform: uppercase;
             color: #FFFFFF;
+            &-media {
+                width: 286px;
+                height: 47px;
+                font-family: Circe;
+                font-style: normal;
+                font-weight: bold;
+                font-size: 23px;
+                line-height: 47px;
+                letter-spacing: 0.12em;
+                text-transform: uppercase;
+                color: #FFFFFF;
+            }
         }
         &-add {
             width: 466px;
